--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
         </h2>
     </main>
     <footer>
+        <section>
         Para más información deja tus datos:
-        <form action="Datos">
-            TELEFONO
-            <label for="Telefono"></label>
-            <input type="TELEFONO"> <br>
-            CORREO
-            <input type="CORREO">
-            <button>Cotiza ahora</button>
-        </form>
+            <form action="Datos">
+                TELEFONO
+                <label for="Telefono"></label>
+                <input type="TELEFONO"> <br>
+                CORREO
+                <input type="CORREO"> <br>
+                <button> <a href="https://www.kavak.com/mx?utm_source=google&utm_medium=cpc&utm_campaign=mx-all-brandkwd-leadgen-searchintent_trans-search-es-mid-ao_kavak_brand_generic_all|17394728158&utm_term=kavak&utm_content=searchintent_trans-kavak_generic_phrase|136790257345&utm_id=17394728158&gad_source=1&gad_campaignid=17394728158&gbraid=0AAAAAoYXKx2GZbDON-75vQCdBTtBlgVbZ&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKIy3PNdqkyd3C1Zc3fJSdvnMl7ZXL_ySIP4Pg3LkZUggfkjxxbanUYaAgTfEALw_wcB">Cotiza ya</a></button>
+            </form>
+        </section>
     </footer>
 </body>
 </html>
