archivo read me y colores

--- a/index.html
+++ b/index.html
@@ -7,48 +7,56 @@
     <title>Proyecto Rafael Montoya</title>
 </head>
 <body>
-    <header> 
-        <h1><p> <strong> Mejores autos 2010 </strong> </p>
+    <header style=" background-color: rgb(151, 142, 243); " > 
+        <h1><p> <strong> MEJORES AUTOS 2010 </strong> </p>
         </h1>
     </header>
     <main>
         <h2>
             <nav>
-                <ul>
-                    <p> Kia soul </p>
-                        <img width="200" src="https://cdn.wheel-size.com/automobile/body/kia-soul-2008-2011-1643441476.4404945.jpg" alt="kia soul">
-                        <li>Motor 1.8  </li>
-                        <li> 122 caballos de fuerza  </li>
-                        <li> 34 mpg <br>
-                        <a href="https://www.kia.com/mx/main.html?utm_source=paidsearch&utm_medium=google&utm_campaign=iwm-kmx_aon_sembrand_NA_t1_20220101_20221231&utm_content=cpc_textad_NA_NA&gad_source=1&gad_campaignid=12511765585&gbraid=0AAAAACUGeFX1o69r8n7ORrQvAA1R-WQhU&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKK-UncBucuhylDYUdD3shUCOYBSACY5KvGFYRvgx8EOSjzKG0to_MYaAuB6EALw_wcB">KIA MEXICO</a>
-                        </li>
-                    <p> Mazda 3  </p>
-                        <img width="200" src="https://superautousa.com/cdn/shop/products/274052471447-5.jpg?v=1728381198&width=1024" alt="mazda3">
-                        <li>Motor 2.0  </li>
-                        <li> Potencia 148 caballos de fuerza  </li>
-                        <li> Consumo 36 mpg <br>
-                        <a href="https://www.mazda.mx/?utm_source=google-ads&utm_medium=search&utm_campaign=aon_mazda_marca&utm_term=din&utm_content=standard_mx&utm_marketing_tactic=na-cluster&gad_source=1&gad_campaignid=1732785291&gbraid=0AAAAADsHirMd9XYmE4VJKR9_BvfL-ZBvn&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKIy9n6SkvtAeXz2JjelEUC7AzHG_pCk9hrr1qhsipDEqCUlVNr62asaAjDlEALw_wcB">MAZDA MX</a>
-                        </li>
-                    <p> Hyundai Elantra </p>
-                        <img src="https://images.prd.kavak.io/eyJidWNrZXQiOiJrYXZhay1pbWFnZXMiLCJrZXkiOiJpbWFnZXMvMzk0Mzc1L0VYVEVSSU9SLWZyb250U2lkZVBpbG90TmVhci0xNzQzMDk0MjgwNzkwLmpwZWciLCJlZGl0cyI6eyJyZXNpemUiOnsid2lkdGgiOjU0MCwiaGVpZ2h0IjozMTAsImJhY2tncm91bmQiOnsiciI6MjU1LCJnIjoyNTUsImIiOjI1NSwiYWxwaGEiOjB9fX19" alt="Elantra" width="200">
-                        <li>Motor 1.6 </li> 
-                        <li>Potencia 148 caballos de fuerza </li> 
-                        <li> Consumo 35 mpg <br>
-                        <a href="https://www.hyundai.com.mx/?utm_source=search&utm_medium=paid-search&utm_campaign=iwm-hmm_aon_nacional_t1_20250701_20250731&utm_content=cpc_sem_keyword_busqueda&gad_source=1&gad_campaignid=22098304307&gbraid=0AAAAABZmj8nEAXGPmVkgioG6KAKzOn4BX&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKLMrwVs2fPEF1NSF3BE4ytWE4RrePn5qMAGs4nkYkwPYK4BAxkZsPEaAq49EALw_wcB">Hyundai MEXICO</a>
-                        </li>
-                    <p> Nissan Versa </p>
-                        <img src="https://images.hgmsites.net/lrg/2010-nissan-versa-5dr-hb-auto-s-angular-front-exterior-view_100301825_l.jpg" alt="nissan versa" width="200">
-                        <li>Motor 1.6  </li>
-                        <li>Potencia 122 caballos de fuerza </li> 
-                        <li> Consumo 32 mp <br>
-                        <a href="https://www.nissan.com.mx/experiencia-nissan/esto-es-nissan.html?dcp=sem-aon_sch-brnd-goo-txt_na-aon-gen_nmkt_nal_aon_CPC_na_search&gclsrc=aw.ds&gad_source=1&gad_campaignid=22202037747&gbraid=0AAAAADvpcvlEZlQPd-bvBbFdwiAbOaykq&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKLKQsvhRK-sPe6PR4JHA-CYbgJG7mCEoDccjVqdpYlCJc6onIOhHfcaAikdEALw_wcB">NISSAN MEXICANA</a>
-                        </li>
+                <ul> 
+                    <section style="background-color: rgb(236, 108, 108);">
+                        <p> Kia soul </p>
+                            <img width="200" src="https://cdn.wheel-size.com/automobile/body/kia-soul-2008-2011-1643441476.4404945.jpg" alt="kia soul">
+                            <li>Motor 1.8  </li>
+                            <li> 122 caballos de fuerza  </li>
+                            <li> 34 mpg <br>
+                            <a href="https://www.kia.com/mx/main.html?utm_source=paidsearch&utm_medium=google&utm_campaign=iwm-kmx_aon_sembrand_NA_t1_20220101_20221231&utm_content=cpc_textad_NA_NA&gad_source=1&gad_campaignid=12511765585&gbraid=0AAAAACUGeFX1o69r8n7ORrQvAA1R-WQhU&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKK-UncBucuhylDYUdD3shUCOYBSACY5KvGFYRvgx8EOSjzKG0to_MYaAuB6EALw_wcB">KIA MEXICO</a>
+                            </li>
+                    </section>
+                    <section style="background-color: rgb(240, 109, 92);">
+                        <p> Mazda 3  </p>
+                            <img width="200" src="https://superautousa.com/cdn/shop/products/274052471447-5.jpg?v=1728381198&width=1024" alt="mazda3">
+                            <li>Motor 2.0  </li>
+                            <li> Potencia 148 caballos de fuerza  </li>
+                            <li> Consumo 36 mpg <br>
+                            <a href="https://www.mazda.mx/?utm_source=google-ads&utm_medium=search&utm_campaign=aon_mazda_marca&utm_term=din&utm_content=standard_mx&utm_marketing_tactic=na-cluster&gad_source=1&gad_campaignid=1732785291&gbraid=0AAAAADsHirMd9XYmE4VJKR9_BvfL-ZBvn&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKIy9n6SkvtAeXz2JjelEUC7AzHG_pCk9hrr1qhsipDEqCUlVNr62asaAjDlEALw_wcB">MAZDA MX</a>
+                            </li>
+                    </section>
+                    <section style="background-color: rgba(0, 100, 0, 0.37);">
+                        <p> Hyundai Elantra </p>
+                            <img src="https://images.prd.kavak.io/eyJidWNrZXQiOiJrYXZhay1pbWFnZXMiLCJrZXkiOiJpbWFnZXMvMzk0Mzc1L0VYVEVSSU9SLWZyb250U2lkZVBpbG90TmVhci0xNzQzMDk0MjgwNzkwLmpwZWciLCJlZGl0cyI6eyJyZXNpemUiOnsid2lkdGgiOjU0MCwiaGVpZ2h0IjozMTAsImJhY2tncm91bmQiOnsiciI6MjU1LCJnIjoyNTUsImIiOjI1NSwiYWxwaGEiOjB9fX19" alt="Elantra" width="200">
+                            <li>Motor 1.6 </li> 
+                            <li>Potencia 148 caballos de fuerza </li> 
+                            <li> Consumo 35 mpg <br>
+                            <a href="https://www.hyundai.com.mx/?utm_source=search&utm_medium=paid-search&utm_campaign=iwm-hmm_aon_nacional_t1_20250701_20250731&utm_content=cpc_sem_keyword_busqueda&gad_source=1&gad_campaignid=22098304307&gbraid=0AAAAABZmj8nEAXGPmVkgioG6KAKzOn4BX&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKLMrwVs2fPEF1NSF3BE4ytWE4RrePn5qMAGs4nkYkwPYK4BAxkZsPEaAq49EALw_wcB">Hyundai MEXICO</a>
+                            </li>
+                        </section>
+                        <section style="background-color: rgb(214, 157, 111);">
+                        <p> Nissan Versa </p>
+                            <img src="https://images.hgmsites.net/lrg/2010-nissan-versa-5dr-hb-auto-s-angular-front-exterior-view_100301825_l.jpg" alt="nissan versa" width="200">
+                            <li>Motor 1.6  </li>
+                            <li>Potencia 122 caballos de fuerza </li> 
+                            <li> Consumo 32 mp <br>
+                            <a href="https://www.nissan.com.mx/experiencia-nissan/esto-es-nissan.html?dcp=sem-aon_sch-brnd-goo-txt_na-aon-gen_nmkt_nal_aon_CPC_na_search&gclsrc=aw.ds&gad_source=1&gad_campaignid=22202037747&gbraid=0AAAAADvpcvlEZlQPd-bvBbFdwiAbOaykq&gclid=Cj0KCQjwnJfEBhCzARIsAIMtfKLKQsvhRK-sPe6PR4JHA-CYbgJG7mCEoDccjVqdpYlCJc6onIOhHfcaAikdEALw_wcB">NISSAN MEXICANA</a>
+                            </li>
+                        </section>
                 </ul>
             </nav>
         </h2>
     </main>
     <footer>
-        <section>
+        <section style="background-color: rgba(54, 153, 247, 0.849);">
         Para más información deja tus datos:
             <form action="Datos">
                 TELEFONO
